# todo-cli

./: README.md  main.py  pyproject.toml
src/todo_cli/: __init__.py  cli.py  models.py  storage.py
src/todo_cli/web/: __init__.py  app.py
src/todo_cli/web/static/: app.js  index.html  style.css
tests/: test_cli.py  test_models.py  test_storage.py  test_web.py
